# Anomaly_Detection_Annealing

./: .gitignore  Cargo.toml  README.md  Readme_usecase.txt  Use_case_Annealing.ipynb  classical_main.py  hyper_param.py  pyproject.toml  quantum_main.py
Latex_qcp/: .Anomaly_Detection_Team_A.pdf.icloud  config.tex  contents.tex  file.pseudo  index.tex  references.bib
Latex_qcp/src/: main.bib  main.tex
pip_files/: py310.txt  py38.txt  py39.txt  pypp.txt
plots/: prob_plots.py
rust_src/: lib.rs
src/: drawer.py  helper.py  model.py  qbm.py  rbm.py
testing/Scripts/: aqasm2circ  circ2aqasm  get_gprof  get_objgraph  qat-batchrun  qat-circprint  qat-circstat  qat-jobrun  qat-resprint  undill
testing/conda-meta/: history
